tests/negative/typecheck/args-named-few.orng
fn main() -> Int {
    let x: (a: Int, b: Int) = (.a = 43)
    4
}